--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,20 @@ body {
 /*----------------
       TYPO
 ------------------*/
+.titolo {
+  font-weight: 600;
+  padding-top: 15px;
+  padding-bottom: 5px;
+}
+
+.small {
+  font-size: small;
+  color: #7d7f84;
+}
+
+.all h2 {
+  padding-bottom: 20px;
+}
 
 /*----------------
       HEADER
@@ -95,9 +109,13 @@ aside {
   text-transform: uppercase;
   font-weight: 600;
 }
+
+.section-album a:hover {
+  color: white;
+}
 /* /menu navigazione  */
 
-.recently-played {
+.played {
   display: flex;
   gap: 15px;
   flex-wrap: wrap;
@@ -105,11 +123,28 @@ aside {
 
 .box-album {
   width: calc(100% / 6 - 15px);
+  text-align: center;
 }
 
 .img-style {
   width: 100%;
   object-fit: contain;
+}
+
+.img-style-radius {
+  border-radius: 50%;
+}
+
+.box-album span {
+  display: inline-block;
+}
+
+.tag-play {
+  padding: 40px 0px;
+}
+
+.all {
+  padding-bottom: 100px;
 }
 
 /*----------------
