--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,10 @@ body {
   font-weight: 800;
 }
 
+.create-playlist button {
+  border: none;
+}
+
 /*----------------
       TYPO
 ------------------*/
@@ -44,6 +48,21 @@ body {
 
 .all h2 {
   padding-bottom: 20px;
+}
+
+.box-logo .titolo {
+  font-size: 30px;
+}
+
+.container-nav-aside h3 {
+  text-transform: uppercase;
+  padding-top: 20px;
+}
+
+.create-playlist i {
+  padding: 8px 10px;
+  background-color: #a3a3a3;
+  color: black;
 }
 
 /*----------------
@@ -73,6 +92,7 @@ main {
   color: white;
 }
 
+/* aside  */
 aside {
   width: 250px;
   height: calc(100vh - 80px);
@@ -80,16 +100,85 @@ aside {
   overflow-y: auto;
   flex-shrink: 0;
 }
-.all {
-  padding: 0 50px;
+
+.container-nav-aside {
+  display: flex;
+  flex-direction: column;
+  padding: 20px 20px;
+  height: 100%;
+}
+.box-logo,
+.box-nav {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.box-logo {
+  padding-bottom: 30px;
+}
+.box-nav {
+  padding: 5px 0px;
 }
 
-.section-album {
-  overflow-y: auto;
-  background-color: #141922;
-  width: calc(100% - 250px);
-  height: calc(100vh - 80px);
+.logo {
+  width: 40px;
+  height: 40px;
 }
+
+.font-awesome {
+  width: 30px;
+  height: 30px;
+}
+
+.container-nav-aside a {
+  color: #7d7f84;
+  text-decoration: none;
+}
+
+.create-playlist {
+  padding-top: 10px;
+}
+.create-playlist a {
+  padding-left: 5px;
+}
+
+.playlist li {
+  list-style: none;
+  padding: 15px 0px;
+  font-size: small;
+}
+.box-footer-aside {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: flex-end;
+}
+.download {
+  width: 15px;
+  height: 15px;
+}
+.box-download {
+  display: flex;
+  gap: 10px;
+  padding-bottom: 10px;
+}
+
+.box-profile {
+  display: flex;
+  padding-top: 10px;
+  align-items: center;
+  gap: 10px;
+}
+
+.profile {
+  width: 20px;
+  height: 20px;
+  background-color: #a3a3a3;
+  border-radius: 50%;
+}
+
+/* /aside */
+
 /* menu navigazione  */
 .section-album nav ul {
   display: flex;
@@ -110,10 +199,21 @@ aside {
   font-weight: 600;
 }
 
-.section-album a:hover {
+a:hover {
   color: white;
 }
 /* /menu navigazione  */
+
+.all {
+  padding: 0 50px;
+}
+
+.section-album {
+  overflow-y: auto;
+  background-color: #141922;
+  width: calc(100% - 250px);
+  height: calc(100vh - 80px);
+}
 
 .played {
   display: flex;
@@ -194,6 +294,25 @@ footer {
 
   .box-album {
     width: calc(100% / 2 - 15px);
+  }
+
+  .container-nav-aside {
+    display: flex;
+    flex-direction: column;
+    padding: 5px;
+    height: 100%;
+  }
+  .font-awesome {
+    width: 40px;
+    height: 40px;
+  }
+
+  .container-nav-aside span {
+    display: none;
+  }
+
+  .playlist {
+    display: none;
   }
 }
 
