--- a/css/style.css
+++ b/css/style.css
@@ -108,8 +108,8 @@ aside {
 .container-nav-aside {
   display: flex;
   flex-direction: column;
+  height: 73%;
   padding: 20px 20px;
-  height: 100%;
 }
 .box-logo,
 .box-nav {
@@ -118,10 +118,22 @@ aside {
   gap: 10px;
 }
 .box-logo {
-  padding-bottom: 30px;
+  padding: 20px 20px;
 }
+
 .box-nav {
-  padding: 5px 0px;
+  padding: 5px 20px;
+}
+.border {
+  border-left: 2px solid greenyellow;
+}
+
+.box-nav a {
+  text-decoration: none;
+}
+
+a span:hover {
+  color: white;
 }
 
 .logo {
@@ -156,6 +168,7 @@ aside {
   flex-direction: column;
   height: 100%;
   justify-content: flex-end;
+  flex-grow: 1;
 }
 .download {
   width: 20px;
@@ -199,6 +212,18 @@ aside {
 .section-album li {
   padding: 10px 30px;
   list-style: none;
+  position: relative;
+}
+
+.stile:after {
+  content: '';
+  position: absolute;
+  display: block;
+  width: 30%;
+  height: 2px;
+  background-color: greenyellow;
+  bottom: 0;
+  left: 60px;
 }
 
 .section-album a {
@@ -469,12 +494,28 @@ footer {
   .container-nav-aside {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     padding: 5px;
-    height: 100%;
+    height: 70%;
+  }
+  aside span {
+    display: none;
+  }
+  .box-logo {
+    padding: 10px;
+  }
+
+  .box-nav {
+    padding: 10px;
   }
   .font-awesome {
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
+  }
+
+  .logo {
+    width: 30px;
+    height: 30px;
   }
 
   .container-nav-aside span {
